--- a/blocktypes/o.yaml
+++ b/blocktypes/o.yaml
@@ -17,6 +17,9 @@ publicData:
           x: 0.0
           "y": 0.0
         shape: 16
+        textures:
+          "0":
+            path: n:textures/block/water/waterbump.png
   title: Ocean
   type: WATER
 updatedAt: 2026-01-07T21:32:01.853+00:00
