Export world @shared:n (77 exported, 0 deleted)

--- a/assets/audio/steps/step_cloth1.ogg.info.yaml
+++ b/assets/audio/steps/step_cloth1.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816434
-  date: 2026-01-07T20:07:14.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:14.541+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 10357
-storageId: 6a06a97e-8028-475f-ba7b-68eacc6a859b
+storageId: c993d14b-febf-4bf0-95a1-9ba487d8d5b9
 worldId: '@shared:n'
