--- a/assets/audio/steps/step_wood1.ogg.info.yaml
+++ b/assets/audio/steps/step_wood1.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816479
-  date: 2026-01-07T20:07:59.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:59.317+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8469
-storageId: b4acb35c-46e1-4737-9480-3a2be23d1eb4
+storageId: 9b150449-3284-49d3-8e69-0939816e8d2f
 worldId: '@shared:n'
