--- a/assets/audio/steps/step_cloth3.ogg.info.yaml
+++ b/assets/audio/steps/step_cloth3.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816417
-  date: 2026-01-07T20:06:57.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:06:57.197+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 9958
-storageId: 1b100f11-3271-49a7-a5e5-dbd08ce4cb2e
+storageId: f2709185-dc72-42bf-b06b-5ec9a1962321
 worldId: '@shared:n'
