--- a/assets/audio/steps/step_grass4.ogg.info.yaml
+++ b/assets/audio/steps/step_grass4.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816437
-  date: 2026-01-07T20:07:17.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:17.220+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 9887
-storageId: 5d6ac86a-0e79-4696-a20c-f7d7be414220
+storageId: 9b03e6fe-6cd9-4082-9edc-3c4545a40cf0
 worldId: '@shared:n'
