--- a/assets/audio/steps/step_grass5.ogg.info.yaml
+++ b/assets/audio/steps/step_grass5.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816426
-  date: 2026-01-07T20:07:06.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:06.389+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 10441
-storageId: e0635a16-7032-49d0-8c65-60aea65b735a
+storageId: 74d1bc4f-8564-4a12-91de-d2b8e38ab218
 worldId: '@shared:n'
