--- a/assets/audio/steps/step_gravel1.ogg.info.yaml
+++ b/assets/audio/steps/step_gravel1.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816402
-  date: 2026-01-07T20:06:42.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:06:42.937+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 11414
-storageId: e315b634-410e-48bc-bebb-20be37f14fca
+storageId: 13bda89b-c310-4160-81b6-fdb19a57ff7f
 worldId: '@shared:n'
