--- a/assets/audio/steps/step_gravel3.ogg.info.yaml
+++ b/assets/audio/steps/step_gravel3.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816377
-  date: 2026-01-07T20:06:17.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:06:17.921+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8805
-storageId: 6a85a8b4-34b4-46be-93fc-439ac169375d
+storageId: 17e23154-a9e2-43ed-adaf-c157768a123e
 worldId: '@shared:n'
