--- a/assets/audio/steps/step_gravel4.ogg.info.yaml
+++ b/assets/audio/steps/step_gravel4.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816420
-  date: 2026-01-07T20:07:00.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:00.498+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 9677
-storageId: 220e9c31-fe10-492d-af91-ec972248a1ea
+storageId: 18adb327-95ea-4e5a-b6e4-771e5ec1c465
 worldId: '@shared:n'
