--- a/assets/audio/steps/step_ladder1.ogg.info.yaml
+++ b/assets/audio/steps/step_ladder1.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816487
-  date: 2026-01-07T20:08:07.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:08:07.428+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 6021
-storageId: 7e5ae69e-dad2-43a1-abe8-98676b945cad
+storageId: eb24581e-01c8-4566-99ec-9e39896473e4
 worldId: '@shared:n'
