--- a/assets/audio/steps/step_ladder2.ogg.info.yaml
+++ b/assets/audio/steps/step_ladder2.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816481
-  date: 2026-01-07T20:08:01.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:08:01.606+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 6125
-storageId: 3f4915c6-b5e3-4748-bde5-e35ba8f7fc1f
+storageId: 62696119-b36f-4891-90ef-911d06ae7000
 worldId: '@shared:n'
