--- a/assets/audio/steps/step_sand5.ogg.info.yaml
+++ b/assets/audio/steps/step_sand5.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816395
-  date: 2026-01-07T20:06:35.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:06:35.777+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 9501
-storageId: 31418a62-2d0b-431c-bac5-8b049905d5d6
+storageId: 7cd6c15f-0d56-4bfa-b39c-53b60769e56d
 worldId: '@shared:n'
