--- a/assets/audio/steps/step_snow1.ogg.info.yaml
+++ b/assets/audio/steps/step_snow1.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816476
-  date: 2026-01-07T20:07:56.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:56.974+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8061
-storageId: 1c3a70c7-7723-47dc-a249-c2e072d53e27
+storageId: aa3058ed-a45c-4741-b779-011db87b3d38
 worldId: '@shared:n'
