--- a/assets/audio/steps/step_snow4.ogg.info.yaml
+++ b/assets/audio/steps/step_snow4.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816471
-  date: 2026-01-07T20:07:51.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:51.948+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8677
-storageId: 70ca9075-99ed-4d4a-a6e6-b2c485053cbe
+storageId: 75d45974-5ef9-461e-9c10-53a743dc1ab5
 worldId: '@shared:n'
