--- a/assets/audio/steps/step_stone1.ogg.info.yaml
+++ b/assets/audio/steps/step_stone1.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816364
-  date: 2026-01-07T20:06:04.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:06:04.011+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 9102
-storageId: b1610954-db6b-40cb-a41d-b3ac4f502263
+storageId: 891a8361-c255-4a68-9e25-7fa04176323b
 worldId: '@shared:n'
