--- a/assets/audio/steps/step_stone4.ogg.info.yaml
+++ b/assets/audio/steps/step_stone4.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816347
-  date: 2026-01-07T20:05:47.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:05:47.161+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8744
-storageId: e002c0dc-ee69-4427-b8d3-f0e03d2666bc
+storageId: 3e8585b7-8c66-4693-a64a-80b249fb85b1
 worldId: '@shared:n'
