--- a/assets/audio/steps/step_stone5.ogg.info.yaml
+++ b/assets/audio/steps/step_stone5.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816352
-  date: 2026-01-07T20:05:52.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:05:52.584+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8543
-storageId: 0b0687a2-7bdb-472c-bbbb-5a845eb5fb8e
+storageId: 7a9a71c9-8aaf-4207-b8cd-653a2d843ffe
 worldId: '@shared:n'
