--- a/assets/audio/steps/step_stone6.ogg.info.yaml
+++ b/assets/audio/steps/step_stone6.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816340
-  date: 2026-01-07T20:05:40.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:05:40.649+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8107
-storageId: 223b4a05-c905-41e5-aa63-ab6f80f7c856
+storageId: e1beea1a-7af6-436b-9b79-a5867e25dcd9
 worldId: '@shared:n'
