--- a/assets/audio/steps/step_wood2.ogg.info.yaml
+++ b/assets/audio/steps/step_wood2.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816469
-  date: 2026-01-07T20:07:49.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:07:49.189+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8652
-storageId: a11a3101-8f78-4197-a4f6-a6ff91e7174a
+storageId: 02b4a203-322d-479f-b3a8-b04dc5b44dd9
 worldId: '@shared:n'
