--- a/assets/audio/steps/step_wood4.ogg.info.yaml
+++ b/assets/audio/steps/step_wood4.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816489
-  date: 2026-01-07T20:08:09.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:08:09.796+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8480
-storageId: e8f18398-707b-4707-8a8e-d371c2f2899b
+storageId: 95ad1d34-ea39-4db2-9a05-2d0869a32045
 worldId: '@shared:n'
