--- a/assets/audio/steps/step_wood6.ogg.info.yaml
+++ b/assets/audio/steps/step_wood6.ogg.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767816492
-  date: 2026-01-07T20:08:12.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T20:08:12.094+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .ogg
   mimeType: audio/ogg
 size: 8104
-storageId: b6eef4f3-f60a-4d17-8ea6-01b5f033892b
+storageId: 97a2a89a-64f7-4208-826c-3be900380b32
 worldId: '@shared:n'
