--- a/assets/textures/block/ground/grass_yellow_top.png.info.yaml
+++ b/assets/textures/block/ground/grass_yellow_top.png.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767810630
-  date: 2026-01-07T18:30:30.000+00:00
+  timestamp: 1768560906
+  date: 2026-01-16T10:55:06.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T18:30:30.631+00:00
 createdBy: editor
 enabled: true
@@ -24,5 +24,5 @@ publicData:
   source: https://github.com/Athemis/PixelPerfectionCE
   width: 16
 size: 6019
-storageId: 87b2b618-bbd1-4e32-bc8e-10b2b74239e7
+storageId: 3d350037-4471-436b-8395-d1d24034cd9c
 worldId: '@shared:n'
