--- a/assets/textures/block/water/waterbump.png.info.yaml
+++ b/assets/textures/block/water/waterbump.png.info.yaml
@@ -1,9 +1,9 @@
 _class: de.mhus.nimbus.world.shared.world.SAsset
 _id:
-  timestamp: 1767827945
-  date: 2026-01-07T23:19:05.000+00:00
+  timestamp: 1768584679
+  date: 2026-01-16T17:31:19.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-07T23:19:05.440+00:00
 createdBy: editor
 enabled: true
@@ -13,6 +13,6 @@ publicData:
   category: textures
   extension: .png
   mimeType: image/png
-size: -1
-storageId:
+size: 60352
+storageId: f1afc0e9-770b-4ad5-a30e-a7d59a1bd779
 worldId: '@shared:n'
