--- a/blocktypes/o.yaml
+++ b/blocktypes/o.yaml
@@ -1,14 +1,14 @@
 _class: de.mhus.nimbus.world.shared.world.WBlockType
 _id:
-  timestamp: 1767821521
-  date: 2026-01-07T21:32:01.000+00:00
+  timestamp: 1768584207
+  date: 2026-01-16T17:23:27.000+00:00
 _schema: 1.0.0
 blockId: o
 createdAt: 2026-01-07T21:32:01.853+00:00
 enabled: true
 publicData:
   _id: o
-  description: 'Ocean'
+  description: Ocean
   initialStatus: 0
   modifiers:
     "0":
