Export world @shared:n (84 exported, 0 deleted)

--- a/assets/models/animals/cow.glb.info.yaml
+++ b/assets/models/animals/cow.glb.info.yaml
@@ -3,7 +3,7 @@ _id:
   timestamp: 1768585534
   date: 2026-01-16T17:45:34.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-16T17:45:34.091+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .glb
   mimeType: model/gltf-binary
 size: 331280
-storageId: 91fc6ec7-1d0b-407f-a5c7-aac5072139fc
+storageId: a6701239-3320-4489-ba0a-da8aaed515ec
 worldId: '@shared:n'
