--- a/assets/models/people/wizard.glb.info.yaml
+++ b/assets/models/people/wizard.glb.info.yaml
@@ -3,7 +3,7 @@ _id:
   timestamp: 1768585515
   date: 2026-01-16T17:45:15.000+00:00
 _schema: 1.0.0
-compressed: false
+compressed: true
 createdAt: 2026-01-16T17:45:15.192+00:00
 createdBy: editor
 enabled: true
@@ -14,5 +14,5 @@ publicData:
   extension: .glb
   mimeType: model/gltf-binary
 size: 1165928
-storageId: 553627da-a468-41c3-ab2a-9000ba433243
+storageId: fbf26d58-4fcc-4522-82b7-e9b15017ca26
 worldId: '@shared:n'
